--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-mathjax": "^1.0.1",
+    "react-p5": "^1.1.8",
     "react-scripts": "3.2.0"
   },
   "scripts": {
